--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -39,6 +39,8 @@
                 </div>
 
                 <button type="submit" class="btn btn-info">Submit</button>
+                <button class="btn btn-info" id="rzp-button1">Buy Premium</button>
+                <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
             </form>
             <div class="mb-3">
                 <hr>
@@ -68,6 +70,74 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script>
+
+        const rzpButton = document.getElementById("rzp-button1");
+        rzpButton.addEventListener('click', async (e) => {
+            e.preventDefault();
+    
+            const token = localStorage.getItem('token');
+            const response = await axios.post('http://localhost:3000/purchase/premium', null, {
+                headers: {
+                    "Authorization" : token
+                }
+            })
+            let options = {
+                "key": response.data.key_id, // Enter the Key ID generated from the Dashboard
+                "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+                "currency": "INR",
+                "name": "Abhishek Corp", //your business name
+                "description": "Test Transaction",
+                "image": "https://example.com/your_logo",
+                "order_id": response.data.orderId, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+                "handler": async function(res) {
+                    const token = localStorage.getItem('token');
+                    await axios.post('http://localhost:3000/purchase/updatetransactionstatus', {
+                        success: true,
+                        order_id: res.razorpay_order_id,
+                        payment_id: res.razorpay_payment_id
+                    }, {
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'Authorization': token
+                        }
+                    }).then((res) => {
+                        console.log(res);
+                        alert('You are a Premium user');
+                    }).catch((error) => console.log(error));
+
+                    
+                },
+                "prefill": {
+                    "name": "Gaurav Kumar", //your customer's name
+                    "email": "gaurav.kumar@example.com",
+                    "contact": "9000090000"
+                },
+                "notes": {
+                    "address": "Razorpay Corporate Office"
+                },
+                "theme": {
+                    "color": "#3399cc"
+                }
+            };
+            
+            let rzp1 = new Razorpay(options);
+            rzp1.open();
+            rzp1.on('payment.failed', async function(response) {
+                const token = localStorage.getItem('token');
+                await axios.post('http://localhost:3000/purchase/updatetransactionstatus', {
+                    success: false,
+                    order_id: response.error.metadata.order_id,
+                    payment_id: response.error.metadata.payment_id
+                }, {
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': token
+                    }
+                })
+                alert(response.error.description);
+            })
+        })
+
         const formEl = document.querySelector('#expense-form');
         // sending the form data to the backend
 
