--- a/expense-tracker-full-stack/views/forgot-password.html
+++ b/expense-tracker-full-stack/views/forgot-password.html
@@ -4,63 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Forgot-Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="display-1" style="text-align: center;">Login</h1>
+                <h1 class="display-1" style="text-align: center;">Forgot Password</h1>
             </div>
         </div>
         <div class="row">
-            <form id="login-form">
+            <form id="forgot-password-form">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" placeholder="Enter Your Email" name="email" required> 
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="text" class="form-control" placeholder="Enter Your Password" name="password" required> 
-                </div>
                 <div class="row">
                     <div class="col">
-                        <input type="submit" class="btn btn-primary" id="submit" value="Login">
+                        <input type="submit" class="btn btn-primary" id="submit" value="Send Reset Link">
                     </div>
-                    <div class="col">
-                        <a href="/password/forgot-password" target ="_blank" class="btn btn-primary" id="forgot-password">Forgot Password?</a>
-                    </div>
-                </div>
-                
-                <div class="mb-3">
-                    <div id="message"></div>
                 </div>
             </form>
+            <div class="mb-3">
+                <div id="message"></div>
+            </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script>
-        const formEl = document.getElementById('login-form');
+        const formEle = document.querySelector('#forgot-password-form');
+        const messageSection = document.querySelector('#messsage');
 
-        formEl.addEventListener('submit', (e) => {
+        formEle.addEventListener('submit', (e) => {
             e.preventDefault();
-
-            axios.post('http://localhost:3000/user/login', document.querySelector('#login-form'), {
+            console.log('htlo')
+            axios.post('http://localhost:3000/password/forgot-password', formEle, {
                 headers: {
                     'Content-Type': 'application/json'
                 }
             })
-            .then(res => {
-                alert(res.data.message);
-                localStorage.setItem('token', res.data.token);
-                window.location.href = 'http://localhost:3000/user/daily-expenses';
+            .then(() => {
+                message.textContent = 'Password Reset Link send to the Email';
+                message.style.color = 'green';
             })
-            .catch(err => {
-                alert(err.response.data.error);
+            .catch((err) => {
+                message.textContent = 'Something went Wrong';
+                message.style.color = 'red';
             })
         })
     </script>
+
 </body>
 </html>
