--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Expenses</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"></head>
 <body>
     <div class="container">
         <div class="row">
@@ -49,7 +48,10 @@
                         <p class="btn" id="premiumText"></p>
                     </div>
                     <div class="col">
-                        <button class="btn btn-info" id="leaderboard-button">Show LeaderBoard</button>
+                        <button class="btn btn-info" id="report-button">See Report</button>
+                    </div>
+                    <div class="col">
+                        <a href="http://localhost:3000/premium/report" target="_blank" class="btn btn-info" id="leaderboard-button">Show LeaderBoard</a>
                     </div>
                 </div>
                 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -78,7 +80,7 @@
         <div id="leaderboard-section" style="display: none;">
             <h3 class="text-center">LeaderBoard</h3>
             <table class="table">
-                <thead class="thead">
+                <thead class="thead-dark">
                     <tr>
                         <th scope="col">Name</th>
                         <th scope="col">Total Amount</th>
@@ -89,14 +91,65 @@
                 </tbody>
             </table>
         </div>
+        <div id="report-section" style="display: block;">
+            <h3 class="text-center">Report</h3>
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Income</th>
+                    <th scope="col">Expense</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>01-02-2021</td>
+                    <td>Milk</td>
+                    <td>Milk</td>
+                    <td>s</td>
+                    <td>60.00</td>
+                  </tr>
+                  <tr>
+                    <td>01-02-2021</td>
+                    <td>Milk</td>
+                    <td>Milk</td>
+                    <td>s</td>
+                    <td>60.00</td>
+                  </tr>
+                  <tr>
+                    <td>01-02-2021</td>
+                    <td>Milk</td>
+                    <td>Milk</td>
+                    <td>s</td>
+                    <td>60.00</td>
+                  </tr>
+                  <tr>
+                    <td colspan="4"></td>
+                    <td>180</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
     </div>
 
     
     <!-- <script src="index.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    
 
     <script>
+
+        function showReport() {
+            const reportSection = document.querySelector('#')
+        }
+        
         // Show LeaderBoard Functionconst showLeaderBoardButton = document.querySelector('#leaderboard-button');
 
         const leaderboardSection = document.querySelector('#leaderboard-section');
@@ -154,6 +207,8 @@
                     document.getElementById('premiumText').textContent = 'You are a Premium User';
                     document.getElementById('premiumText').style.fontWeight = 'bold';
 
+                } else {
+                    // Hide the  see report button if the user is not premium.
                 }
                 
             })
@@ -324,5 +379,6 @@
 
         fetchExpenses();
     </script>
+
 </body>
 </html>
