Report Generation Backend (Premium Feature)

--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -39,7 +39,7 @@
 
                 <div class="row">
                     <div class="col">
-                        <button type="submit" class="btn btn-info">Submit</button>
+                        <button class="btn btn-info" id="submit-button">Submit</button>
                     </div>
                     <div class="col">
                         <button class="btn btn-info" id="rzp-button1">Buy Premium</button>
@@ -48,7 +48,7 @@
                         <p class="btn" id="premiumText"></p>
                     </div>
                     <div class="col">
-                        <button class="btn btn-info" id="report-button">See Report</button>
+                        <button class="btn btn-info" id="report-button">Download Report</button>
                     </div>
                     <div class="col">
                         <a href="http://localhost:3000/premium/report" target="_blank" class="btn btn-info" id="leaderboard-button">Show LeaderBoard</a>
@@ -62,7 +62,7 @@
         </div>
 
         <table class="table">
-            <thead  class="thead">
+            <thead  class="thead-light">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Amount</th>
@@ -91,46 +91,16 @@
                 </tbody>
             </table>
         </div>
-        <div id="report-section" style="display: block;">
-            <h3 class="text-center">Report</h3>
-            <table class="table table-bordered">
-                <thead class="thead-dark">
-                  <tr>
-                    <th scope="col">Date</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Income</th>
-                    <th scope="col">Expense</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>01-02-2021</td>
-                    <td>Milk</td>
-                    <td>Milk</td>
-                    <td>s</td>
-                    <td>60.00</td>
-                  </tr>
-                  <tr>
-                    <td>01-02-2021</td>
-                    <td>Milk</td>
-                    <td>Milk</td>
-                    <td>s</td>
-                    <td>60.00</td>
-                  </tr>
-                  <tr>
-                    <td>01-02-2021</td>
-                    <td>Milk</td>
-                    <td>Milk</td>
-                    <td>s</td>
-                    <td>60.00</td>
-                  </tr>
-                  <tr>
-                    <td colspan="4"></td>
-                    <td>180</td>
-                  </tr>
+        <div id="report-section" style="display: none;">
+            
+        </div>
+
+        <div class="filesurl-section">
+            <table class="table">
+                <tbody id="tbody-fileurls">
+
                 </tbody>
-              </table>
+            </table>
         </div>
     </div>
 
@@ -144,241 +114,7 @@
 
     
 
-    <script>
-
-        function showReport() {
-            const reportSection = document.querySelector('#')
-        }
-        
-        // Show LeaderBoard Functionconst showLeaderBoardButton = document.querySelector('#leaderboard-button');
-
-        const leaderboardSection = document.querySelector('#leaderboard-section');
-        const leaderboardBody = document.querySelector('#tbody-leaderboard');
-        let isVisible = false
-
-        document.querySelector('#leaderboard-button').addEventListener('click', async (e) => {
-            e.preventDefault();
-            await axios.post('http://localhost:3000/premium/leaderboard', {}, {
-                headers: {
-                    "Authorization": token
-                }
-            })
-            .then(leaderboard => {
-                leaderboardBody.innerHTML = '';
-                leaderboard.data.forEach(user => {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = '';
-                    const tdName = document.createElement('td');
-                    tdName.textContent = user.name;
-
-                    const tdAmount = document.createElement('td');
-                    tdAmount.textContent = user.totalAmount;
-
-                    tr.appendChild(tdName);
-                    tr.appendChild(tdAmount);
-
-                    leaderboardBody.appendChild(tr);
-                });
-
-
-                
-                if(isVisible) {
-                    leaderboardSection.style.display = 'none';
-                } else {
-                    leaderboardSection.style.display = 'block'
-                }
-                isVisible = !isVisible;
-            })
-            .catch(err => console.log(err));
-        })
-
-        // Check if the use is already a existing Premium user.?
-        const token = localStorage.getItem('token');
-        async function hideOrNot () {
-            await axios.post('http://localhost:3000/purchase/ispremium', null, {
-                headers: {
-                    "Authorization" : token
-                }
-            })
-            .then(result => {
-                if(result.data.isPremiumUser) {
-                    const rzpButton = document.getElementById('rzp-button1');
-                    rzpButton.style.display = 'none';
-                    document.getElementById('premiumText').textContent = 'You are a Premium User';
-                    document.getElementById('premiumText').style.fontWeight = 'bold';
-
-                } else {
-                    // Hide the  see report button if the user is not premium.
-                }
-                
-            })
-            .catch(err => console.log(err));
-        }
-
-        hideOrNot();
-
-        const rzpButton = document.getElementById("rzp-button1");
-        rzpButton.addEventListener('click', async (e) => {
-            e.preventDefault();
-    
-            const token = localStorage.getItem('token');
-            const response = await axios.post('http://localhost:3000/purchase/premium', null, {
-                headers: {
-                    "Authorization" : token
-                }
-            })
-            let options = {
-                "key": response.data.key_id, // Enter the Key ID generated from the Dashboard
-                "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
-                "currency": "INR",
-                "name": "Abhishek Corp", //your business name
-                "description": "Test Transaction",
-                "image": "https://example.com/your_logo",
-                "order_id": response.data.orderId, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-                "handler": async function(res) {
-                    const token = localStorage.getItem('token');
-                    await axios.post('http://localhost:3000/purchase/updatetransactionstatus', {
-                        success: true,
-                        order_id: res.razorpay_order_id,
-                        payment_id: res.razorpay_payment_id
-                    }, {
-                        headers: {
-                            'Content-Type': 'application/json',
-                            'Authorization': token
-                        }
-                    }).then((res) => {
-                        console.log(res);
-                        alert('You are a Premium user');
-                        window.location.href = 'http://localhost:3000/user/daily-expenses'
-                    }).catch((error) => console.log(error));
-
-                    
-                },
-                "prefill": {
-                    "name": "Gaurav Kumar", //your customer's name
-                    "email": "gaurav.kumar@example.com",
-                    "contact": "9000090000"
-                },
-                "notes": {
-                    "address": "Razorpay Corporate Office"
-                },
-                "theme": {
-                    "color": "#3399cc"
-                }
-            };
-            
-            let rzp1 = new Razorpay(options);
-            rzp1.open();
-            rzp1.on('payment.failed', async function(response) {
-                const token = localStorage.getItem('token');
-                await axios.post('http://localhost:3000/purchase/updatetransactionstatus', {
-                    success: false,
-                    order_id: response.error.metadata.order_id,
-                    payment_id: response.error.metadata.payment_id
-                }, {
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': token
-                    }
-                })
-                alert(response.error.description);
-            })
-        })
-
-        const formEl = document.querySelector('#expense-form');
-        // sending the form data to the backend
-
-        formEl.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const token = localStorage.getItem('token');
-            const {result} = axios.post('http://localhost:3000/user/expenses', document.querySelector('#expense-form'), {
-                headers: {
-                   'Content-Type': 'application/json',
-                   'Authorization': token
-                }
-            })
-            .then(window.location.href = 'http://localhost:3000/user/daily-expenses');
-        })
-        
-        const tbody = document.querySelector('.tbody'); 
-
-        function addExpenseToScreen(expense) {
-            const tr = document.createElement('tr');
-
-            const tdId = document.createElement('td');
-            tdId.textContent = expense.id;
-
-            const tdAmount = document.createElement('td');
-            tdAmount.textContent = expense.amount;
-
-            const tdDesc = document.createElement('td');
-            tdDesc.textContent = expense.description;
-
-            const tdCategory = document.createElement('td');
-            tdCategory.textContent = expense.category;
-
-            // Adding the Delete Button
-            const tdDelete = document.createElement('td');
-            const delBtn = document.createElement('input');
-            delBtn.type = 'button';
-            delBtn.value = 'Delete';
-            delBtn.classList.add('btn', 'btn-danger');
-            delBtn.onclick = () => {
-                let expense_id = expense.id;
-                let token = localStorage.getItem('token');
-                axios.delete('/user/delete', {
-                    headers: {
-                        'Authorization': token
-                    },
-                    data: {
-                        id: expense_id
-                    }
-                })
-                .then(window.location.href = 'http://localhost:3000/user/daily-expenses')
-                .catch(err => console.log(err));
-            }
-            tdDelete.appendChild(delBtn);
-
-            // Adding the Edit Button
-            const tdEdit = document.createElement('td');
-            const editBtn = document.createElement('input');
-            editBtn.type = 'button';
-            editBtn.value = 'Edit';
-            editBtn.classList.add('btn', 'btn-warning');
-            editBtn.onclick = () => {
-                document.getElementById('idInputBox').value = expense.id;
-                document.getElementById('amountInputBox').value = expense.amount;
-                document.getElementById('descInputBox').value = expense.description;
-                document.getElementById('catInputBox').value = expense.category;
-            }
-            tdEdit.appendChild(editBtn);
-
-            tr.appendChild(tdId);
-            tr.appendChild(tdAmount);
-            tr.appendChild(tdDesc);
-            tr.appendChild(tdCategory);
-            tr.appendChild(tdDelete);
-            tr.appendChild(tdEdit);
-
-            tbody.appendChild(tr);
-        }
-
-        // Showing existing expenses.
-        async function fetchExpenses() {
-            const token = localStorage.getItem('token');
-            let response = await axios.get('http://localhost:3000/user/expenses', {
-                headers: {
-                    "Authorization": token
-                }
-            });
-            let data = response.data;
-            data.forEach(expense => {
-                addExpenseToScreen(expense);
-            });
-        }
-
-        fetchExpenses();
-    </script>
+    <script src="/js/expenses.js"></script>
 
 </body>
 </html>
