--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -101,11 +101,24 @@
 
                 </tbody>
             </table>
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    
-                </ul>
-              </nav>
+            <div class="row">
+                <div class="col">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col">
+                    <select id="dropdown">
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                      </select>
+                </div>
+            </div>
+            
+            
         </div>
     </div>
 
