--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -9,8 +9,13 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <h1 class="display-1" style="text-align: center;">Expense Tracker</h1>
+            <div class="col-11">
+                <h3 class="display-3" style="text-align: center;">Expense Tracker</h3>
+            </div>
+            <div class="col-1">
+                <div class="col">
+                    <button id="logout" class="btn btn-primary">Log Out</button>
+                </div>
             </div>
         </div>
         <form id="expense-form">
