changed-localhost-to-ip

--- a/expense-tracker-full-stack/views/forgot-password.html
+++ b/expense-tracker-full-stack/views/forgot-password.html
@@ -40,7 +40,7 @@
         
         formEle.addEventListener('submit', (e) => {
             e.preventDefault();
-            axios.post('http://localhost:3000/password/forgot-password', formEle, {
+            axios.post('http://43.207.195.127:3000/password/forgot-password', formEle, {
                 headers: {
                     'Content-Type': 'application/json'
                 }
