--- a/expense-tracker-full-stack/views/expenses.html
+++ b/expense-tracker-full-stack/views/expenses.html
@@ -56,7 +56,7 @@
                 <button class="btn btn-info" id="report-button">Download Report</button>
             </div>
             <div class="col-sm">
-                <a href="http://43.207.195.127:3000/premium/report" target="_blank" class="btn btn-info" id="leaderboard-button">Show LeaderBoard</a>
+                <a href="http://localhost:80/premium/report" target="_blank" class="btn btn-info" id="leaderboard-button">Show LeaderBoard</a>
             </div>
         </div>
                 
