--- a/expense-tracker-full-stack/views/reset-password.html
+++ b/expense-tracker-full-stack/views/reset-password.html
@@ -47,7 +47,7 @@
                 password1: document.querySelector('#password1').value, 
                 password2: document.querySelector('#password2').value 
             };
-            axios.post('http://43.207.195.127:3000/password/reset-password', data, {
+            axios.post('http://localhost:80/password/reset-password', data, {
                 headers: {
                     'Content-Type': 'application/json'
                 }
@@ -57,7 +57,7 @@
                 message.textContent = 'Password Changed Successfully';
                 message.style.color = 'green';
                 setTimeout(() => {
-                    document.location = 'http://43.207.195.127:3000/user/login';
+                    document.location = 'http://localhost:80/user/login';
                 }, 3000);
             })
             .catch((err) => {
