--- a/expense-tracker-full-stack/views/signup.html
+++ b/expense-tracker-full-stack/views/signup.html
@@ -45,7 +45,7 @@
 
         formEl.addEventListener('submit', (e) => {
             e.preventDefault();
-            axios.post('http://localhost:80/user/signup', document.querySelector('#signup-form'), {
+            axios.post('http://43.207.195.127:80/user/signup', document.querySelector('#signup-form'), {
                 headers: {
                     'Content-Type': 'application/json'
                 }
